# stage-teleprompter-pro

./: .gitignore  AppIcon.icns  README.md  build-desktop.sh  index.html  package-lock.json  package.json  scripts.json  stage.html  tailwind.config.js  vite.config.ts  vite.config.windows.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/target-dev/: .rustc_info.json
src-tauri/target-dev/: .rustc_info.json
src-tauri/target-dev/debug/: libstage_teleprompter_pro_lib.d  libstage_teleprompter_pro_lib.dylib  stage-teleprompter-pro.d
src-tauri/target-dev/debug/.fingerprint/adler2-2eb39c7df02fd352/: lib-adler2  lib-adler2.json
src-tauri/target-dev/debug/.fingerprint/aho-corasick-2b57c4803a25a88b/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-dev/debug/.fingerprint/aho-corasick-59539a01f8ae5489/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-dev/debug/.fingerprint/alloc-no-stdlib-ac0471aff4a529c2/: lib-alloc_no_stdlib
src-tauri/target-dev/debug/.fingerprint/alloc-stdlib-6d63b547472d62af/: lib-alloc_stdlib
src-tauri/target-dev/debug/.fingerprint/anyhow-374f72706e556cc6/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-dev/debug/.fingerprint/anyhow-53b39d9d9cc75071/: lib-anyhow  lib-anyhow.json
src-tauri/target-dev/debug/.fingerprint/anyhow-71e58e7dbf9b2a23/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-dev/debug/.fingerprint/autocfg-a9b31c2037e64176/: lib-autocfg  lib-autocfg.json
(+680 files in other folders)
