[package]
name = "stage-teleprompter-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "stage_teleprompter_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

